fixed html page having unnecessary scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 html {
   height: 100vh;
   background: linear-gradient(to right, #d7d0cc, #ffffff);
+  overflow: hidden;
 }
 
 
